# inverse-eval

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  MARIA_PRIOR_BOUNDS_SUMMARY.md  Makefile  Pipfile  README.md  aggregate_batch_stats.py  aggregate_stats.json  analyze_maria_dataset.py  analyze_synthetic_issues.py  auto_batch_sweep.py  auto_batch_sweep_anaklasis.py  auto_batch_sweep_calibration.py  auto_batch_sweep_mean.py  batch_analysis.py  batch_custom_inference.py  batch_inference_pipeline.py  batch_inference_pipeline_simple.py  batch_pipeline.py  batch_sweep_runner.py  bootstrap.py  bootstrap_windows.py  build_denoised_experimental_dataset.py  compare_clean_vs_theoretical.py  compare_model_versions.py  compare_sld_profiles.py  config.py  constraints_utils.py  copy_paper_batch_jsons.py  data_preprocessing.py  device_utils.py  error_calculation.py  evaluate_pickle_predictions.py  evaluate_random_guessing.py  evaluate_random_guessing_examples.py  explore_reflectorch.ipynb  extract_prior_bounds.py  filter_error_bars.py  (+48 more)
.github/: copilot-instructions.md
anaklasis_eval/: build_combined_json.py  build_csv_comparison.py  check_manifest_254.py  check_ranges.py  combined_predictions.json  compare_data.py  compare_manifest_json.py  compare_predictions.py  evaluate_pickle_predictions.py  inspect_manifest.py  manifest_exp_1L.pkl  predictions_comparison.csv  readme.rtf  results_exp_1L_fitconstraints1_width0.3_simple.pkl  results_exp_1L_fitconstraints2_width0.3_simple.pkl  results_exp_2L_fitconstraints0_width0.3_simple.pkl  show_indices.py  view.py  (+2 more)
(+3216 files in other folders)
