[project]
name = "inverse-eval"
version = "0.1.0"
description = "Evaluation pipeline for reflectometry parameter estimation experiments."
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
extend-exclude = ["vendor", ".venv", "notebooks"]

[tool.ruff.lint]
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.10"
root = ["."]

[tool.ty.src]
include = ["bootstrap.py", "bootstrap_windows.py", "device_utils.py", "tests"]
respect-ignore-files = true
